@@ -337,7 +337,7 @@ rm -rf $RPM_BUILD_ROOT
 %dir %{prefix}/share/gcompris/boards/skins
 %{prefix}/share/gcompris/boards/skins/*
 %{prefix}/share/gcompris/boards/[^fs]*
-%{prefix}/share/gcompris/boards/f[iu]*
+%{prefix}/share/gcompris/boards/f[iuo]*
 %{prefix}/share/gcompris/boards/s[cmu]*
 %dir %{prefix}/share/gcompris/boards/sounds
 %{prefix}/share/gcompris/boards/sounds/*.ogg
