@@ -63,6 +63,7 @@ boards/draw.xml.in
 boards/enumerate.xml.in
 boards/erase.xml.in
 boards/experience.xml.in
+boards/followline.xml.in
 boards/fifteen.xml.in
 boards/fun.xml.in
 boards/geography.xml.in
