@@ -1,3 +1,9 @@
+2004-09-01  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* gcompris.spec.in: added missing file
+	* po/POTFILES.in: added missing source file
+	* src/boards/python/followline.py: improved it. not yet complete  playable but close.
+
 2004-08-28  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/Makefile.am: added new followline.xml.in board
